objects/Email_Log__c.object
<CustomObject>
    <description>Captures incoming email details from emailHandler</description>
    <fields>
        <fullName>Email_CC_Addresses__c</fullName>
        <label>Email CC Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_From_Address__c</fullName>
        <label>Email From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_HTML_Body__c</fullName>
        <label>Email HTML Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Text_Body__c</fullName>
        <label>Email Text Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_To_Addresses__c</fullName>
        <label>Email To Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Envelope_From_Address__c</fullName>
        <label>Envelope From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Envelope_To_Address__c</fullName>
        <label>Envelope To Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <label>Email Log</label>
    <listViews>
        <fullName>All_Emails</fullName>
        <columns>NAME</columns>
        <columns>Email_From_Address__c</columns>
        <columns>Email_Subject__c</columns>
        <columns>Email_To_Addresses__c</columns>
        <columns>Is_Valid__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Emails</label>
    </listViews>
    <listViews>
        <fullName>email_failures</fullName>
        <columns>NAME</columns>
        <columns>Email_Subject__c</columns>
        <columns>Email_To_Addresses__c</columns>
        <columns>Envelope_To_Address__c</columns>
        <columns>Email_HTML_Body__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Is_Valid__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Email_From_Address__c</columns>
        <columns>Email_CC_Addresses__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>7/1/2016 12:00 AM</value>
        </filters>
        <label>email failures</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Email Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>